# quote_site

./: .gitignore  api.py  main.py  models.py  mydatabase  pyproject.toml  utils.py
quote_page/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
quote_page/migrations/: 0001_initial.py  0002_user.py  0003_delete_user.py  0004_tablequote.py  0005_tablequote_position.py
quote_page/templates/quote_page/: add_quote.html  fail_add.html  random_quote_liked.html  random_quote_not_liked.html  stat.html  success_add.html
quote_page/templates/registration/: login.html
quotes_site/: asgi.py  settings.py  urls.py  wsgi.py
