[project]
name = "test-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "fastapi[standard]>=0.116.1",
    "numpy>=2.3.2",
    "psycopg>=3.2.9",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.43",
]
